--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/static/styles.css" rel="stylesheet">
-<!--    <link href="/static/favicon.ico" rel="icon">-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>-->
+    <script src="/static/scripts.js"></script>
     <title>Medical Lab System: {% block title %}{% endblock %}</title>
 </head>
-<body>
+<body onload="highlight({{ tab }});">
     <div class="navbar">
         <div class="navbar-logo">🧪 Title</div>
         {% if session["user_id"] %}
@@ -18,7 +16,7 @@
                 <li class="navbar-tab">🗓️ Appointments</li>
                 <li class="navbar-tab">📄 Results</li>
             </ul>
-            <div class="logout"><a class="nav-link" href="/logout">Log Out</a></div>
+            <a class="logout" href="/logout">Log Out</a>
         {% endif %}
     </div>
     {% if session["user_id"] %}
@@ -33,7 +31,7 @@
     {% if get_flashed_messages() %}
         <header>
             <div id="flash" class="alert alert-primary mb-0 text-center" role="alert">
-                <span id="message"style="">🔔 {{ get_flashed_messages() | join(" ") }} </span>
+                <span id="message"style=""> {{ get_flashed_messages() | join(" ") }} </span>
                 <button id="close" onclick="closeFlash();">X</button>
             </div>
         </header>
@@ -46,15 +44,5 @@
     <main class="container py-5 text-center">
         {% block main %}{% endblock %}
     </main>
-    <script>
-        function closeFlash() {
-            document.getElementById('flash').style.display = 'none';
-            document.getElementsByTagName('main')[0].style.marginTop = '15px';
-        }
-        const childNo = {% block tabNo %}{% endblock %};
-        const navbarTabs = document.querySelectorAll('.navbar-tab');
-        navbarTabs[childNo].classList.add('highlight');
-        navbarTabs[childNo + 3].classList.add('highlight');
-    </script>
 </body>
 </html>
