--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -5,16 +5,12 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/register" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
-        </div>
-        <div class="mb-3">
-            <input class="form-control mx-auto w-auto" name="confirmation" placeholder="Password (again)" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Register</button>
+    <link href="/static/login.css" rel="stylesheet">
+    <form class="form" action="/register" method="post">
+        <p class="form-title">Create a new account</p>
+        <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text">
+        <input name="password" placeholder="Enter password" type="password">
+        <input name="confirmation" placeholder="Confirm password" type="password">
+        <button class="submit" type="submit">Register</button>
     </form>
 {% endblock %}
