--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -48,7 +48,10 @@ main {
     position: fixed;
     top: 65px;
     width: 50vw;
-    left: 20vw;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     border-radius: 15px;
     background-color: #cfe2ff;
     border: 1px solid #9ec5fe;
