--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <link href="/static/login.css" rel="stylesheet">
-    <form class="form" action="/login" method="post">
+    <form action="/login" method="post">
         <p class="form-title">Sign in to your account</p>
         <input autocomplete="off" autofocus name="username" placeholder="Enter username" type="text">
         <input name="password" placeholder="Enter password" type="password">
