--- a/src/static/login.css
+++ b/src/static/login.css
@@ -1,4 +1,4 @@
-.form {
+form {
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -10,28 +10,28 @@
     max-width: 350px;
     border-radius: 0.5rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  }
-  
-  .form-title {
+}
+
+.form-title {
     font-size: 1.25rem;
     line-height: 1.75rem;
     font-weight: 600;
     text-align: center;
     color: #000;
-  }
-  
-  .input-container {
+}
+
+.input-container {
     position: relative;
     
-  }
-  
-  input, .form button {
+}
+
+input, .form button {
     outline: none;
     border: 1px solid #e5e7eb;
     margin: 8px 0;
-  }
-  
-  input {
+}
+
+input {
     background-color: #fff;
     padding: 1rem;
     font-size: 0.875rem;
@@ -41,9 +41,9 @@
     width: 90%;
     max-width: 300px;
     overflow-y: scroll;
-  }
-  
-  .submit {
+}
+
+.submit {
     display: block;
     padding: 0.75rem 1rem;;
     background-color: #545454;
@@ -55,15 +55,17 @@
     max-width: 300px;
     border-radius: 0.5rem;
     text-transform: uppercase;
-  }
-  
-  .signup-link {
+    margin-top: 1rem;
+}
+
+.signup-link {
     color: #6B7280;
     font-size: 0.875rem;
     line-height: 1.25rem;
     text-align: center;
-  }
-  
-  .signup-link a {
+}
+
+.signup-link a {
     text-decoration: underline;
-  }
+    color: #406abd;
+}
