--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -4,8 +4,12 @@ body {
     padding: 20px 0;
 }
 main {
-    padding: 85px 30px;
+    padding: 85px 20px;
     text-align: center;
+}
+a {
+    text-decoration: none;
+    color: white;
 }
 .alert-primary {
     display: flex;
@@ -147,6 +151,7 @@ main {
         bottom: 2%;
         padding: 5px 0;
         border-radius: 20px;
+        z-index: 9;
     }
     .tab-bar .navbar-tab {
         font-size: 13px;
