--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,57 +1,84 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Home
+Information
 {% endblock %}
 
 {% set tab = 0 %}
 
 {% block main %}
-    <!-- hi {{ username }} -->
-    <form action="/submit_user_info" method="post">
-        <!-- Hidden field to carry the username and password if needed -->
-        <input type="hidden" name="username" value="USERNAME">
-        <input type="hidden" name="password" value="PASSWORD">
-
-        <label for="age">Age:</label>
-        <input type="number" id="age" name="age" min="0" required><br>
-
-        <label for="gender">Gender:</label>
-        <input type="radio" id="male" name="gender" value="1">
-        <label for="male">Male</label>
-        <input type="radio" id="female" name="gender" value="0">
-        <label for="female">Female</label><br>
-
-        <label for="height_cm">Height (cm):</label>
-        <input type="number" id="height_cm" name="height_cm" min="0"><br>
-
-        <label for="weight_g">Weight (g):</label>
-        <input type="number" id="weight_g" name="weight_g" min="0"><br>
-
-        <label for="married">Married:</label>
-        <input type="checkbox" id="married" name="married" value="1"><br>
-
-        <label for="work">Work (e.g., occupation code):</label>
-        <input type="number" id="work" name="work" min="0"><br>
-
-        <label for="residence">Residence:</label>
-        <input type="checkbox" id="residence" name="residence" value="1"><br>
-
-        <label for="smoke">Smoking Status (e.g., 0 = Non-smoker, 1 = Smoker):</label>
-        <input type="number" id="smoke" name="smoke" min="0" max="1"><br>
-
-        <label for="pregnancies">Number of Pregnancies:</label>
-        <input type="number" id="pregnancies" name="pregnancies" min="0"><br>
-
-        <label for="cp">Chest Pain Type (e.g., 0 to 3):</label>
-        <input type="number" id="cp" name="cp" min="0" max="3"><br>
-
-        <label for="exng">Exercise Induced Angina:</label>
-        <input type="checkbox" id="exng" name="exng" value="1"><br>
-
-        <label for="heart_disease">Heart Disease:</label>
-        <input type="checkbox" id="heart_disease" name="heart_disease" value="1"><br>
-
-        <input type="submit" value="Submit">
+<link rel="stylesheet" href="/static/form.css">
+<h2>User Information</h1>
+    <form action="/" method="post">
+        <div>
+            <label for="full_name">Full Name</label><br>
+            <input type="text" id="full_name" name="full_name" class="form-control">
+            <br><br>
+            <label for="email">Email</label><br>
+            <input type="email" id="email" name="email" class="form-control">
+            <br><br>
+            <label for="birth_year">Birth Year: </label>
+            <input type="number" id="birth_year" name="birth_year" min="1900" max="2024" class="form-control">
+            <br><br>
+            <label>Gender:</label><br>
+            <input type="radio" id="male" name="gender" value="1">
+            <label for="male">Male</label><br>
+            <input type="radio" id="female" name="gender" value="0">
+            <label for="female">Female</label>
+            <br><br>
+            <label for="height_cm">Height (cm)</label>
+            <input type="number" id="height" name="height" min="0" class="form-control" style="width: 68px;">
+            <br><br>
+            <label for="weight">Weight (kg)</label>
+            <input type="number" id="weight" name="weight" min="0" class="form-control" style="width: 68px;">
+            <br><br>
+            <label>Ever got married:</label><br>
+            <input type="radio" id="married_yes" name="married" value="1">
+            <label for="married_yes">Yes</label><br>
+            <input type="radio" id="married_no" name="married" value="0">
+            <label for="married_no">No</label>
+            <br><br>
+            <label for="work">Work Status:</label><br>
+            <select id="work" name="work" class="form-control">
+                <option value="0">Private</option>
+                <option value="1">Self-Employed</option>
+                <option value="2">Government</option>
+                <option value="3">Children</option>
+                <option value="4">Never Worked</option>
+            </select>
+            <br><br>
+            <label>Residence:</label><br>
+            <input type="radio" id="urban" name="residence" value="1">
+            <label for="urban">Urban</label><br>
+            <input type="radio" id="rural" name="residence" value="0">
+            <label for="rural">Rural</label>
+            <br><br>
+            <label for="smoke">Smoking Status:</label><br>
+            <select id="smoke" name="smoke" class="form-control">
+                <option value="0">Unknown</option>
+                <option value="1">Never</option>
+                <option value="2">Former</option>
+                <option value="3">Current</option>
+            </select>
+            <br><br>
+            <label for="pregnancies">Number of Pregnancies:</label><br>
+            <input type="number" id="pregnancies" name="pregnancies" min="0" class="form-control" style="width: 68px;">
+            <br><br>
+            <label>Chest Pain Type:</label><br>
+            <select id="cp" name="cp" class="form-control">
+                <option value="1">Typical Angina</option>
+                <option value="2">Atypical Angina</option>
+                <option value="3">Non-Anginal Pain</option>
+                <option value="4">Asymptomatic</option>
+            </select>
+            <br><br>
+            <input type="checkbox" id="exng" name="exng" value="1">
+            <label for="exng">Exercise Induced Angina</label>
+            <br><br>
+            <input type="checkbox" id="heart_disease" name="heart_disease" value="1">
+            <label for="heart_disease">Heart Disease</label>
+            <br><br>
+            <input type="submit" value="Save" style="margin: 0 50%; translate: -50% 0;">
+        </div>
     </form>
-{% endblock %}
+    {% endblock %}
