--- a/src/templates/register.jinja
+++ b/src/templates/register.jinja
@@ -12,5 +12,10 @@
         <input name="password" placeholder="Enter password" type="password">
         <input name="confirmation" placeholder="Confirm password" type="password">
         <button class="submit" type="submit">Register</button>
+
+        <p class="signup-link">
+         Have an account?
+         <a href="/">Sign in</a>
+        </p>
     </form>
 {% endblock %}
