--- a/src/templates/error.jinja
+++ b/src/templates/error.jinja
@@ -7,4 +7,5 @@
 {% block main %}
     <h1>Error {{ code }} </h1>
     <p> {{ message }} </p>
+    <button onclick="window.history.back()">Go Back</button>
 {% endblock %}
