--- a/src/templates/error.jinja
+++ b/src/templates/error.jinja
@@ -7,5 +7,7 @@
 {% block main %}
     <h1>Error {{ code }} </h1>
     <p> {{ message }} </p>
-    <button onclick="window.history.back()">Go Back</button>
+    <button onclick="window.history.back()" style="padding: 0.5rem 1rem; border-radius: 0.5rem; border: none; cursor: pointer;">
+        Go Back
+    </button>
 {% endblock %}
