--- a/src/templates/index.jinja
+++ b/src/templates/index.jinja
@@ -27,7 +27,7 @@ Information
             <label for="female">Female</label>
             <br><br>
             <label for="height">Height (cm)</label>
-            <input {% if user_info["hight"] != None %} value="{{ user_info['hight'] }}" {% endif %} type="number" id="hight" name="hight" min="0" class="form-control" style="width: 68px;">
+            <input {% if user_info["height"] != None %} value="{{ user_info['height'] }}" {% endif %} type="number" id="height" name="height" min="0" class="form-control" style="width: 68px;">
             <br><br>
             <label for="weight">Weight (kg)</label>
             <input {% if user_info["weight"] != None %} value="{{ user_info['weight'] }}" {% endif %} type="number" id="weight" name="weight" min="0" class="form-control" style="width: 68px;">
