--- a/app/templates/appointments.jinja
+++ b/app/templates/appointments.jinja
@@ -1,11 +1,11 @@
 {% extends "layout.jinja" %}
 
 {% block title %}
-    Results
+Appointments
 {% endblock %}
 
-{% set tab = 2 %}
+{% set tab = 1 %}
 
 {% block main %}
-    Results
+Appointments
 {% endblock %}
