--- a/app/templates/results.jinja
+++ b/app/templates/results.jinja
@@ -1,11 +1,11 @@
 {% extends "layout.jinja" %}
 
 {% block title %}
-    Appointments
+Results
 {% endblock %}
 
-{% set tab = 1 %}
+{% set tab = 2 %}
 
 {% block main %}
-    Appointments
+Results
 {% endblock %}
