--- a/app/templates/results.jinja
+++ b/app/templates/results.jinja
@@ -7,5 +7,34 @@ Results
 {% set tab = 2 %}
 
 {% block main %}
-Results
+<link rel="stylesheet" href="static/table.css">
+<h2>Results</h2>
+<div class="table-container">
+    <table>
+        <thead>
+            <tr>
+                <th scope="col">Time</th>
+                <th scope="col">Location</th>
+                <th scope="col">Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+            </tr>
+            <tr>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+            </tr>
+            <tr>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 {% endblock %}
