--- a/app/templates/appointments.jinja
+++ b/app/templates/appointments.jinja
@@ -9,6 +9,7 @@ Appointments
 {% block main %}
 <link rel="stylesheet" href="static/table.css">
 <h2>Appointments</h2>
+{% if rows %}
 <div class="table-container">
     <table>
         <thead>
@@ -19,22 +20,18 @@ Appointments
             </tr>
         </thead>
         <tbody>
+            {% for row in rows %}
             <tr>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td>{{ row.time }}</td>
+                <td>{{ row.location}}</td>
+                <td>{{ row.type }}</td>
             </tr>
-            <tr>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
+{% else %}
+You have no appointments.
+{% endif %}
+<a href="/appoint"><button>New Appointment</button></a>
 {% endblock %}
