add tests table and add appoint page

--- a/app/static/form.css
+++ b/app/static/form.css
@@ -11,7 +11,8 @@ form {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.form-control {
+input,
+select {
     padding: .375rem .75rem;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     border-radius: .4rem;
