--- a/app/templates/appointments.jinja
+++ b/app/templates/appointments.jinja
@@ -33,5 +33,5 @@ Appointments
 {% else %}
 You have no appointments.
 {% endif %}
-<a href="/appoint"><button>New Appointment</button></a>
+<br><a href="/appoint"><button>New Appointment</button></a>
 {% endblock %}
