--- a/app/templates/layout.jinja
+++ b/app/templates/layout.jinja
@@ -7,6 +7,7 @@
     <link rel="icon" href="/static/logo.ico">
     <link href="/static/styles.css" rel="stylesheet">
     <script src="/static/scripts.js"></script>
+    <script src="/static/htmx.js"></script>
     <title>Medical Lab System: {% block title %}{% endblock %}</title>
 </head>
 
