--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -81,8 +81,8 @@ Information
                 checked {% endif %}>
             <label for="heart_disease">Heart Disease</label>
             <br><br>
-            <input id="save" type="submit" value="Save" class="mid">
+            <input type="submit" value="Save" class="mid blue btn">
         </div>
     </form>
-    <a href="/delete"><button id="delete">Delete all Information</button></a>
+    <a href="/delete"><button class="red btn">Delete all Information</button></a>
     {% endblock %}
