--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -11,10 +11,10 @@ Appointments
 <h2>Appointments</h2>
 <form action="/appoint" method="post">
     <div>
-        <label for="type">Type:</label><br>
-        <select id="type" name="type" required>
-            {% for type in types %}
-            <option value="{{ type.id }}">{{ type.name }}</option>
+        <label for="test">Type:</label><br>
+        <select id="test" name="test" required>
+            {% for test in tests %}
+            <option value="{{ test.id }}">{{ test.name }}</option>
             {% endfor %}
         </select><br>
         <label for="location">Location:</label><br>
@@ -30,7 +30,7 @@ Appointments
         <select id="time" name="time" required>
             <option disabled>pick a day first</option>
         </select><br>
-        <button id="save" type="submit">Create Appointment</button>
+        <button class="blue btn" type="submit">Create Appointment</button>
     </div>
 </form>
 {% endblock %}
