--- a/app/templates/appointments/appointments.jinja
+++ b/app/templates/appointments/appointments.jinja
@@ -17,14 +17,16 @@ Appointments
                 <th scope="col">Time</th>
                 <th scope="col">Location</th>
                 <th scope="col">Type</th>
+                <th scope="col">clear</th>
             </tr>
         </thead>
         <tbody>
             {% for row in rows %}
             <tr>
                 <td>{{ row.time }}</td>
-                <td>{{ row.location}}</td>
+                <td>{{ row.location }}</td>
                 <td>{{ row.type }}</td>
+                <td><a href="/remove?id={{row.id}}">🗑</a></td>
             </tr>
             {% endfor %}
         </tbody>
@@ -33,5 +35,6 @@ Appointments
 {% else %}
 You have no appointments.
 {% endif %}
-<br><a href="/appoint"><button>New Appointment</button></a>
+<br><a href="/appoint"><button class="blue btn" style="margin-top: 1rem;">New Appointment</button></a>
+{% if rows %}<br><a href="/clear"><button class="red btn">Delete All Appointments</button></a>{% endif %}
 {% endblock %}
