fix minor stuff

--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -8,7 +8,7 @@ Appointments
 
 {% block main %}
 <link rel="stylesheet" href="/static/form.css">
-<h2>Appointments</h2>
+<h2>Create an Appointment</h2>
 <form action="/appoint" method="post">
     <div>
         <label for="test">Type:</label><br>
