replace times with periods

--- a/app/templates/appointments/appointments.jinja
+++ b/app/templates/appointments/appointments.jinja
@@ -17,7 +17,7 @@ Appointments
                 <th scope="col">Time</th>
                 <th scope="col">Location</th>
                 <th scope="col">Type</th>
-                <th scope="col">clear</th>
+                <th scope="col">cancel</th>
             </tr>
         </thead>
         <tbody>
