--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -24,7 +24,7 @@ Appointments
             {% endfor %}
         </select><br>
         <label for="date">Day:</label><br>
-        <input type="date" id="date" name="date" min="{{ current_date }}" required hx-get="/times" hx-target="#time"
+        <input type="date" id="date" name="date" min="{{ current_date }}" required hx-get="/periods" hx-target="#time"
             hx-trigger="change, change from:[name='test']" hx-include="[name='test'], [name='date']"><br>
         <label for="time">Time:</label><br>
         <select id="time" name="time" required>
