--- a/app/templates/appointments/periods.jinja
+++ b/app/templates/appointments/periods.jinja
@@ -1,3 +1,7 @@
+{% if periods %}
 {% for period in periods %}
 <option value="{{ period }}"> {{ period }} </option>
 {% endfor %}
+{% else %}
+<option disabled>no available time</option>
+{% endif %}
