--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -25,7 +25,8 @@ Appointments
         </select><br>
         <label for="date">Day:</label><br>
         <input type="date" id="date" name="date" min="{{ current_date }}" required hx-get="/periods" hx-target="#time"
-            hx-trigger="change, change from:[name='test']" hx-include="[name='test'], [name='date']"><br>
+            hx-trigger="change, change from:[name='test'], change from:[name='location']"
+            hx-include="[name='test'], [name='date'], [name='location']"><br>
         <label for="time">Time:</label><br>
         <select id="time" name="time" required>
             <option disabled>pick a day first</option>
