--- a/app/templates/appointments/appoint.jinja
+++ b/app/templates/appointments/appoint.jinja
@@ -4,7 +4,7 @@
 Appointments
 {% endblock %}
 
-{% set tab = 1 %}
+{% set tab_number = 1 %}
 
 {% block main %}
 <link rel="stylesheet" href="/static/form.css">
