--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -4,7 +4,7 @@
 Information
 {% endblock %}
 
-{% set tab = 0 %}
+{% set tab_number = 0 %}
 
 {% block main %}
 <link rel="stylesheet" href="/static/form.css">
