--- a/app/templates/results.jinja
+++ b/app/templates/results.jinja
@@ -4,7 +4,7 @@
 Results
 {% endblock %}
 
-{% set tab = 2 %}
+{% set tab_number = 2 %}
 
 {% block main %}
 <link rel="stylesheet" href="static/table.css">
